fix: add horizontal gap between home page's banner text and image (#98)

--- a/src/assets/styles/base/_base.css
+++ b/src/assets/styles/base/_base.css
@@ -32,6 +32,7 @@ body {
 @media (width >= 70.875rem) {
     .banner {
         flex-direction: row;
+        gap: 8.25rem;
     }
 
     .banner__image {
